# teste-do-banco-de-dados

Fortune-Tiaguinho2.0-main/: db.sqlite3  pyproject.toml
Fortune-Tiaguinho2.0-main/config/: settings.py
Fortune-Tiaguinho2.0-main/tiaguinho/: apps.py  models.py
