[project]
name = "Fortune-Tiaguinho_2.0"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Miguel00Roza", email = "miguelroza13@gmail.com"},
]
dependencies = ["django>=5.2.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
